# h1amg

./: .gitignore  CMakeLists.txt  COPYING.LESSER  COPYRIGHT  README.md
cmake_modules/: PythonLibTest.cmake
doc/smoothed_prol/: Makefile  smoothed_prol_h1.tex
python/: complex_square.py  cube_amg.py  cube_geo.py  high_conductivity.py  laplace_square_amg.py  make_matrioshka.py  make_matrioshka_2d.py
src/: CMakeLists.txt  build_h1.cpp  build_h1.hpp  complex_mat.cpp  complex_mat.hpp  dist1collapser.cpp  dist1collapser.hpp  edge.hpp  h1.cpp  h1.hpp  h1_helpers.cpp  h1_helpers.hpp  h1_smoothed_prol.cpp  h1_smoothed_prol.hpp  h1amg.cpp  h1amg.hpp  h1amg_helpers.cpp  h1amg_helpers.hpp  sample_sort.hpp
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  test_h1_helpers.cpp  test_h1amg_helpers.cpp
tests/h1/: CMakeLists.txt  test_h1.py
